<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="@dimen/default_dimen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <ru.shiryaev.schedule.ui.views.TextField
                    android:id="@+id/lesson_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputStyle"
                    style="@style/TextInputStyle"
                    app:hint="@string/lesson"
                    app:helperText="@string/obligatory_field"
                    app:endIconDrawable="@drawable/ic_arrow_drop_down"
                    app:endIconMode="custom"/>

                <ru.shiryaev.schedule.ui.views.TextField
                    android:id="@+id/teacher_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputStyle"
                    style="@style/TextInputStyle"
                    android:layout_marginTop="@dimen/margin_vertical"
                    app:hint="@string/teacher"
                    app:endIconDrawable="@drawable/ic_arrow_drop_down"
                    app:endIconMode="custom"/>

                <ru.shiryaev.schedule.ui.views.TextField
                    android:id="@+id/audit_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputStyle"
                    style="@style/TextInputStyle"
                    android:layout_marginTop="@dimen/margin_vertical"
                    app:hint="@string/audit"
                    app:endIconDrawable="@drawable/ic_arrow_drop_down"
                    app:endIconMode="custom"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/margin_vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginEnd="@dimen/margin_vertical"
                        android:src="@drawable/ic_tasks_app"/>

                    <ru.shiryaev.schedule.ui.views.TextField
                        android:id="@+id/exam_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextInputStyle"
                        style="@style/TextInputStyle"
                        app:hint="@string/type_of_certification"
                        app:endIconDrawable="@drawable/ic_arrow_drop_down"
                        app:endIconMode="custom"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/margin_vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginEnd="@dimen/margin_vertical"
                        android:src="@drawable/ic_baseline_access_time"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/time_start_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/time_start"/>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/divider"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="@dimen/default_dimen"
                        android:layout_marginVertical="@dimen/half_default_dimen"
                        android:backgroundTint="@color/divider_color"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="1dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/time_end_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/time_end"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginVertical="@dimen/margin_vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginEnd="@dimen/margin_vertical"
                        android:src="@drawable/ic_calendar_sync"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/week_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/every_week"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/save"
            app:icon="@drawable/ic_checkmark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>