<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import alias="V" type="android.view.View"/>

        <variable
            name="note"
            type="com.shiryaev.domain.models.Note" />

        <variable
            name="VM"
            type="com.shiryaev.data.viewmodels.AddNoteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddNoteActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/default_dimen"
                android:layout_marginVertical="@dimen/margin_vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                        android:id="@+id/title_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:labelText="@string/title"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:useDenseSpacing="true">

                        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                            android:id="@+id/title_edit_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{note.MTitle}"/>
                    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/title_list_btn"
                        android:layout_width="@dimen/icon_button_size"
                        android:layout_height="@dimen/icon_button_size"
                        android:layout_marginHorizontal="@dimen/elevation"
                        android:layout_marginVertical="@dimen/elevation"
                        android:background="?android:attr/actionBarItemBackground"
                        android:src="@drawable/ic_baseline_notes"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical">

                    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                        android:id="@+id/note_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:helperText="@string/obligatory_field"
                        app:labelText="@string/note"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:useDenseSpacing="true">

                        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                            android:id="@+id/note_edit_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{note.MText}"/>
                    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/margin_vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        app:srcCompat="@drawable/ic_timer_sand"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/deadline_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/default_dimen"
                        android:hint="@string/deadline"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginVertical="@dimen/margin_vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        app:srcCompat="@drawable/ic_palette_outline"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/color_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/default_dimen"
                        android:hint="@string/color"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:visibility="@{VM.fabIsVisible ? V.VISIBLE : V.GONE}"
            android:text="@string/save"
            app:icon="@drawable/ic_check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>