<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddScheduleActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_margin="@dimen/default_dimen">

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/lesson_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:labelText="@string/lesson">

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/lesson_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/teacher_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_dimen"
                    app:labelText="@string/teacher">

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/teacher_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/audit_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_dimen"
                    app:labelText="@string/audit">

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/audit_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>